@@ -4,7 +4,8 @@
 
 * Fix conversion of unmerged table cells.
 
-* Support disabling external file accesses using the external_file_access argument.
+* Disable external file accesses by default. External file access can be enabled
+  using the external_file_access argument.
 
 * Handle numbering levels defined without an index.
 
